# servant-quickcheck-sandbox

./: .gitignore  .travis.yml  LICENSE  README.md  servant-quickcheck-sandbox.cabal  stack.yaml
app/: Main.hs
src/: Api.hs  StackExchangeApi.hs  StackOverflowApi.hs
test/: ApiSpec.hs  StackExchangeSpec.hs  StackOverflowSpec.hs
